applications/app2/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: app2-namespace
  name: app2-svc
  labels:
    app: app2
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
